Define plot for AllocUnits and more parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,14 @@
 
 export(AllocateUnits)
 export(CookAllocMeasure)
+exportClasses(AllocatedUnits)
 exportClasses(CookAllocParam)
 exportClasses(UnitAllocParam)
 exportMethods(AllocateUnits)
 exportMethods(CookAllocMeasure)
+exportMethods(plot)
 import(SelEditUnitPriorit)
 import(StQ)
 import(contObsPredModelParam)
 import(data.table)
+import(ggplot2)
