--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,14 +15,17 @@ Depends:
 Imports:
     methods (>= 3.3.0),
     data.table (>= 1.10.0),
-    SelEditUnitPriorit (>= 0.0.1)
+    SelEditUnitPriorit (>= 0.0.1),
+    ggplot2 (>= 2.2.1),
+    gridExtra (>= 2.2.1)
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
-Collate:
+Collate: 
     'UnitAllocParam-class.R'
     'AllocateUnits.R'
     'AllocatedUnits-class.R'
     'CookAllocParam-class.R'
     'CookAllocMeasure.R'
-RoxygenNote: 5.0.1
+    'plot.AllocatedUnits.R'
+RoxygenNote: 6.0.1
